Did a bunch of suggested little code refactorings changing "get(0)" to "getFirst()" and "remove(0)" to "removeFirst()".